--- a/package.json
+++ b/package.json
@@ -23,13 +23,17 @@
     "@angular/platform-browser-dynamic": "^18.0.1",
     "@angular/platform-server": "^18.0.1",
     "@angular/router": "^18.0.1",
-    "chart.js": "4.4.2",
+    "@primeuix/themes": "^2.0.1",
+    "@tailwindcss/postcss": "^4.1.17",
+    "chart.js": "^4.4.2",
     "json-server": "^1.0.0-beta.3",
+    "primeclt": "^0.1.5",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
     "primeng": "17.18.13",
     "quill": "2.0.2",
     "rxjs": "~7.8.1",
+    "tailwindcss-primeui": "^0.6.1",
     "tslib": "^2.5.0",
     "zone.js": "~0.14.0"
   },
