--- a/angular.json
+++ b/angular.json
@@ -54,7 +54,13 @@
                     "maximumWarning": "2kb",
                     "maximumError": "4kb"
                   }
-                ],
+                ],  
+                "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.prod.ts"
+                }
+              ],
                 "outputHashing": "all"
               },
               "development": {
